# ba_solution_brief

backend/: README_doc_processor.md  example_usage.py  get_context_from_docs.py  get_document_bytes_from_model.py  get_model_from_context.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_document_processor.py
examples/: model.py  template.html
frontend/: package-lock.json  package.json  prd.md
frontend/app/: layout.tsx  page.tsx
