[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "kamiwaza",
    "openai>=1.86.0",
    "pydantic>=2.11.5",
    "pypdf2>=3.0.1",
    "pyppeteer>=2.0.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
]

[tool.uv.sources]
kamiwaza = { git = "https://github.com/kamiwaza-ai/kamiwaza-sdk.git" }
